@@ -12,20 +12,22 @@ gettext.bindtextdomain('offpunk', _LOCALE_DIR)
 gettext.textdomain('offpunk')
 _ = gettext.gettext
 
-def get_latest(name="xkcd"):
+def get_latest(name="xkcd",offline=False):
     if name == "xkcd":
         rss = "https://xkcd.com/atom.xml"
         latest_link = 2
+    #validity is 12h = 43200 seconds
+    if offline: validity = 0
+    else: validity = 43200
     cache = opnk.opencache()
+    netcache.fetch(rss,validity=validity,offline=offline)
     r = cache.get_renderer(rss)
-    print(r.get_links())
-    link = r.get_link(latest_link)
-    return link
-
-# TODO : online/offline ?
-# TODO : if offline, mark to fetch ! (will require list refactoring)
-# TODO : add XKCD to the packaging and documentation
-# BUG : wtitle red is misaligned
+    if not r:
+        print("xkcd needs to be run at least once online to fetch the rss feed")
+        return None
+    else:
+        link = r.get_link(latest_link)
+        return link
 
 def main():
     descri = _("xkcd is a tool to display a given XKCD comic in your terminal")
@@ -41,30 +43,36 @@ def main():
     args = parser.parse_args()
     cache = opnk.opencache()
     url = "https://xkcd.com/"
+    u = None
     for n in args.number:
-        u = None
         if n.isdigit():
             u = url + str(n) + "/"
         elif n == "random":
             # for the random, we simply take the biggest known xkcd comic
             # and find a number between 1 and latest
-            last_url = get_latest()
-            last = last_url.strip("/").split("/")[-1]
-            if last.isdigit():
-                value = random.randrange(2,int(last))
-                u = url + str(value) + "/"
-                if args.offline:
-                    # If offline, we check for a valid netcache version
-                    # We introduce a max counter to not search infinitely
-                    max_counter = 0
-                    while not netcache.is_cache_valid(u) and max_counter < 1000:
-                        value = random.randrange(2,int(last))
-                        u = url + str(value) + "/"
-                        max_counter += 1
+            last_url = get_latest(offline=args.offline)
+            if last_url:
+                last = last_url.strip("/").split("/")[-1]
+                if last.isdigit():
+                    value = random.randrange(2,int(last))
+                    u = url + str(value) + "/"
+                    if args.offline:
+                        # If offline, we check for a valid netcache version
+                        # We introduce a max counter to not search infinitely
+                        max_counter = 0
+                        while not netcache.is_cache_valid(u) and max_counter < 1000:
+                            value = random.randrange(2,int(last))
+                            u = url + str(value) + "/"
+                            max_counter += 1
         elif n == "latest":
-            u = get_latest()
-        if u:
-            cache.opnk(u)
+            u = get_latest(offline=args.offline)
+    if not u:
+        #By default, we get the latest
+        u = get_latest(offline=args.offline)
+    if u:
+        cache.opnk(u)
+    else:
+        print("No cached XKCD comics were found. Please run xkcd online to build the cache")
 
 
 if __name__ == "__main__":
