@@ -23,6 +23,7 @@ Features:
 - "help help" now sends an email to the offpunk-users mailing-list
 - "links" command now display all links
 - new "blocked_link" object in theme. By default, blocked link are in red.
+- new "xkcd" command-line tool to directly access your XKCD comics
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
